# mMass

./: .gitignore  README.md  build.py  calculations.py  display_scale.py  fix_scan.py  mmass.py  pyproject.toml  todo.txt
.github/workflows/: windows-installer.yml
cx/: calculations.c
gui/: config.py  dlg_clipboard_editor.py  dlg_error.py  dlg_mascot_editor.py  dlg_modifications_editor.py  dlg_monomers_editor.py  dlg_notation.py  dlg_presets_editor.py  dlg_references_editor.py  dlg_select_scans.py  doc.py  ids.py  images.py  images_lib_gtk.py  images_lib_mac.py  images_lib_msw.py  libs.py  main_frame.py  mwx.py  panel_about.py  panel_calibration.py  panel_compare_peaklists.py  panel_compounds_search.py  panel_document_export.py  panel_document_info.py  panel_documents.py  panel_envelope_fit.py  panel_mascot.py  panel_mass_calculator.py  panel_mass_defect_plot.py  panel_mass_filter.py  panel_mass_to_formula.py  panel_match.py  panel_monomer_library.py  panel_peak_differences.py  panel_peaklist.py  panel_periodic_table.py  panel_processing.py  panel_profound.py  panel_prospector.py  (+3 more)
mmass_app/: __init__.py
mspy/: mod_calibration.py  mod_envfit.py  mod_formulator.py  mod_mascot.py  mod_pattern.py  mod_signal.py  mod_utils.py  obj_compound.py  obj_peaklist.py  obj_scan.py  obj_sequence.py  parser_fasta.py  parser_mgf.py  parser_mzdata.py  parser_mzml.py  parser_mzxml.py  parser_xy.py  plot_canvas.py  plot_objects.py
packaging/windows/: build_windows_exe.py  build_windows_installer.py  mMass.spec  mMass_installer.nsi
scripts/: build_windows_exe.py
src/gui/: config.py  dlg_compounds_editor.py  dlg_enzymes_editor.py  dlg_error.py  dlg_monomers_editor.py  dlg_select_sequences.py  dlg_settings.py  doc.py  ids.py  images.py  libs.py  main_frame.py  mixins.py  mwx.py  panel_about.py  panel_compare_peaklists.py  panel_documents.py  (+14 more)
tests/: test_mmass3.py
(+17 files in other folders)
