[tool.poetry]
name = "mMass"
version = "6.0.2"
description = ""
authors = ["Edd Salkield <edd@salkield.uk>", "Martin Strohalm"]
license = "GPL-3.0-or-later"
build = 'build.py'

packages = [
    { include = "gui" },
    { include = "mspy" },
    { include = "cx" },
    { include = "mmass.py" },
]

readme = "README.md"
homepage = "https://github.com/dreamingspires/mMass"
repository = "https://github.com/dreamingspires/mMass"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.0"
wxPython = "^4.1.0"
xdgenvpy = "^2.3.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^4.0"
pywin32 = { version = "^228", platform = "win32" }
black = "^20.8b1"
py2app = { version = "^0.23", platform = "darwin" }
auditwheel = { version = "^3.3.1", platform = "linux" }

[tool.poetry.scripts]
mmass = "mmass:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

