[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mMass"
version = "7.0.0-beta3"
description = "mMass - Open Source Mass Spectrometry Tool"
readme = "README.md"
authors = [
    { name = "Edd Salkield", email = "edd@salkield.uk" },
    { name = "Martin Strohalm" }
]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.19.0",
    "scipy",
    "numba",
    "wxPython>=4.1.0",
    "xdgenvpy>=2.3.3,<3.0.0",
    "requests>=2.25.1"
]

[project.urls]
Homepage = "https://github.com/lukaszsobala/mMass"
Repository = "https://github.com/lukaszsobala/mMass"

[project.scripts]
mmass = "mmass:main"

[tool.setuptools]
py-modules = ["mmass", "calculations"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gui", "mspy"]
